--- a/public/cms.html
+++ b/public/cms.html
@@ -31,8 +31,19 @@
 						<label for="body">Body:</label>
 						<textarea placeholder="Post Body" class="form-control" rows="10" id="body"></textarea>
 						<div class="form-group">
-							<label for="category">Select Author:</label>
+							<label for="author">Select Author:</label>
 							<select class="custom-select" id="author">
+  						</select>
+						</div>
+						<div class="form-group">
+							<label for="category">Select Category:</label>
+							<select class="custom-select" id="category">
+								<option value="cooking">Cooking</option>
+								<option value="DIY">DIY</option>
+								<option value="Travel">Travel</option>
+								<option value="Soccer">Soccer</option>
+								<option value="Inspirational Quotes">Inspirational Quotes</option>
+								<option value="Music">Music</option>
   						</select>
 						</div>
 						<br />
