added comment to cms.html

--- a/public/cms.html
+++ b/public/cms.html
@@ -35,6 +35,7 @@
 							<select class="custom-select" id="author">
   						</select>
 						</div>
+						<!-- Added category field -->
 						<div class="form-group">
 							<label for="category">Select Category:</label>
 							<select class="custom-select" id="category">
