added page title and image

--- a/public/blog.html
+++ b/public/blog.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blog - Express</title>
+  <link rel="shortcut icon" href="./images/favicon.ico">
+  <title>Minion Gameplan</title>
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
