--- a/public/blog.html
+++ b/public/blog.html
@@ -5,49 +5,58 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="./images/favicon.ico">
   <title>Minion Gameplan</title>
-    <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"/>
-    <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-      <link rel="stylesheet" href="./css/styles.css.css">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link rel="stylesheet" href="./css/styles.css">
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 </head>
 
 <body>
 
-<!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
-  <li id="diy"><a href="#!">DIY</a></li>
-  <li id="cooking"><a href="#!">Cooking</a></li>
-  <li id="travel"><a href="#!">Travel</a></li>
-  <li id="music"><a href="#!">Music</a></li>
-  <li id="quotes"><a href="#!">Quotes</a></li>
-</ul>
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Logo</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="/authors">Manage Authors</a></li>
-      <li><a href="./cms.html">New Post</a></li>
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i class="material-icons right">arrow_drop_down</i></a></li>
-    </ul>
+  <!-- Dropdown Structure -->
+  <ul id="dropdown1" class="dropdown-content">
+    <li id="diy"><a href="#!">DIY</a></li>
+    <li id="cooking"><a href="#!">Cooking</a></li>
+    <li id="travel"><a href="#!">Travel</a></li>
+    <li id="music"><a href="#!">Music</a></li>
+    <li id="quotes"><a href="#!">Quotes</a></li>
+  </ul>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/authors">Manage Authors</a></li>
+        <li><a href="./cms.html">New Post</a></li>
+        <!-- Dropdown Trigger -->
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
+              class="material-icons right">arrow_drop_down</i></a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Content -->
+
+
+  <div class="container center-align">
+    <div class="row">
+    <div class="col s12">
+      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eligendi a reiciendis qui cum blanditiis fugiat. Amet, optio. Saepe, quos!</h3>
+    </div>
+    </div>
+
   </div>
 
-    <!-- Content -->
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/author.js"></script>
-    <script src="./js/index.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="./js/author.js"></script>
+  <script src="./js/index.js"></script>
 
 </body>
 
