--- a/public/blog.html
+++ b/public/blog.html
@@ -10,7 +10,6 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <link rel="stylesheet" href="./css/styles.css">
-
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -41,16 +40,46 @@
 
   <!-- Content -->
 
+  <main>
+    <div class="container center-align">
+      <div class="row">
+        <div class="col s12">
+          <table>
+            <thead class="hide">
+              <tr>
+                <th>Name</th>
+                <th>Item Name</th>
+                <th>Item Price</th>
+              </tr>
+            </thead>
 
-  <div class="container center-align">
-    <div class="row">
-    <div class="col s12">
-      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eligendi a reiciendis qui cum blanditiis fugiat. Amet, optio. Saepe, quos!</h3>
+            <tbody>
+
+            </tbody>
+          </table>
+          <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eligendi a reiciendis qui cum
+            blanditiis fugiat. Amet, optio. Saepe, quos!</h3>
+        </div>
+      </div>
+
     </div>
+  </main>
+
+  <footer class="page-footer center-align">
+    <div class="container">
+      <div class="row">
+        <div>
+          <h5 class="white-text">Footer Content</h5>
+          <p>You can use rows and columns here to organize your footer content.</p>
+        </div>
+      </div>
     </div>
-
-  </div>
-
+    <div class="footer-copyright">
+      <div class="container">
+        © 2020 Minion Gameplan
+      </div>
+    </div>
+  </footer>
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
