renamed table section names

--- a/public/blog.html
+++ b/public/blog.html
@@ -48,8 +48,10 @@
             <thead class="hide">
               <tr>
                 <th>Name</th>
-                <th>Item Name</th>
-                <th>Item Price</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Preview</th>
+                <th>Posted</th>
               </tr>
             </thead>
 
