--- a/public/blog.html
+++ b/public/blog.html
@@ -40,7 +40,7 @@
 
   <!-- Content -->
 
-  <main>
+  <main class="valign-wrapper">
     <div class="container center-align">
       <div class="row">
         <div class="col s12">
