--- a/public/blog.html
+++ b/public/blog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="./images/favicon.ico">
-  <title>Minion Gameplan</title>
+  <title>Casper</title>
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- Compiled and minified CSS -->
@@ -17,6 +17,21 @@
 
 <body>
 
+<!-- Nav Bar -->
+<nav>
+  <div class="nav-wrapper blue  lighten-2">
+    <a href="#!" class="brand-logo">Logo</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="/authors">Manage Authors</a></li>
+      <li><a href="./cms.html">New Post</a></li>
+      <!-- Dropdown Trigger -->
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
+            class="material-icons right">arrow_drop_down</i></a></li>
+    </ul>
+  </div>
+</nav>
+
+
   <!-- Dropdown Structure -->
   <ul id="dropdown1" class="dropdown-content">
     <li id="diy"><a href="#!">DIY</a></li>
@@ -25,18 +40,6 @@
     <li id="music"><a href="#!">Music</a></li>
     <li id="quotes"><a href="#!">Quotes</a></li>
   </ul>
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/authors">Manage Authors</a></li>
-        <li><a href="./cms.html">New Post</a></li>
-        <!-- Dropdown Trigger -->
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
-              class="material-icons right">arrow_drop_down</i></a></li>
-      </ul>
-    </div>
-  </nav>
 
   <!-- Content -->
 
@@ -67,18 +70,13 @@
     </div>
   </main>
 
-  <footer class="page-footer center-align">
+  <footer class="page-footer center-align blue lighten-2">
     <div class="container">
       <div class="row">
         <div>
-          <h5 class="white-text">Footer Content</h5>
-          <p>You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text">Casper and Company</h5>
+          <p>Practicing social distancing since © 2020 </p>
         </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        © 2020 Minion Gameplan
       </div>
     </div>
   </footer>
