--- a/public/author-manager.html
+++ b/public/author-manager.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CMS - Express</title>
-	<!-- Latest compiled and minified CSS & JS -->
+	<!-- Materialize  -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
 	<script src="https://code.jquery.com/jquery.js"></script>
