--- a/public/blog.html
+++ b/public/blog.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="./css/styles.css">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,19 +18,19 @@
 
 <body>
 
-<!-- Nav Bar -->
-<nav>
-  <div class="nav-wrapper blue  lighten-2">
-    <a href="#!" class="brand-logo">Logo</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="/authors">Manage Authors</a></li>
-      <li><a href="./cms.html">New Post</a></li>
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
-            class="material-icons right">arrow_drop_down</i></a></li>
-    </ul>
-  </div>
-</nav>
+  <!-- Nav Bar -->
+  <nav>
+    <div class="nav-wrapper blue  lighten-2">
+      <a class="brand-logo color">Casper</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/authors">Manage Authors</a></li>
+        <li><a href="./cms.html">New Post</a></li>
+        <!-- Dropdown Trigger -->
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
+              class="material-icons right">arrow_drop_down</i></a></li>
+      </ul>
+    </div>
+  </nav>
 
 
   <!-- Dropdown Structure -->
@@ -54,7 +55,7 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>Preview</th>
-                <th>Posted</th>
+                <th>Posted</th>  
               </tr>
             </thead>
 
@@ -62,8 +63,9 @@
 
             </tbody>
           </table>
-          <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eligendi a reiciendis qui cum
-            blanditiis fugiat. Amet, optio. Saepe, quos!</h3>
+          <h3 class="white-text animated fadeInDown">Insomnia sharpens your math skills because you spend all night calculating how much sleep you’ll get if
+            you’re able to ‘fall asleep right now.</h3>
+            
         </div>
       </div>
 
