added content animation, transparent footer

--- a/public/blog.html
+++ b/public/blog.html
@@ -34,7 +34,7 @@
 
 
   <!-- Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
+  <ul id="dropdown1" class="dropdown-content transparent">
     <li id="diy"><a href="#!">DIY</a></li>
     <li id="cooking"><a href="#!">Cooking</a></li>
     <li id="travel"><a href="#!">Travel</a></li>
@@ -72,7 +72,7 @@
     </div>
   </main>
 
-  <footer class="page-footer center-align blue lighten-2">
+  <footer class="page-footer transparent center-align">
     <div class="container">
       <div class="row">
         <div>
