--- a/public/blog.html
+++ b/public/blog.html
@@ -35,11 +35,11 @@
 
   <!-- Dropdown Structure -->
   <ul id="dropdown1" class="dropdown-content">
-    <li id="diy"><a href="#!">DIY</a></li>
-    <li id="cooking"><a href="#!">Cooking</a></li>
-    <li id="travel"><a href="#!">Travel</a></li>
-    <li id="music"><a href="#!">Music</a></li>
-    <li id="quotes"><a href="#!">Quotes</a></li>
+    <li class="category" data-name="DIY" id="diy"><a href="#">DIY</a></li>
+    <li class="category" data-name="cooking" id="cooking"><a href="#">Cooking</a></li>
+    <li class="category" data-name="travel" id="travel"><a href="#">Travel</a></li>
+    <li class="category" data-name="music" id="music"><a href="#">Music</a></li>
+    <li class="category" data-name="quotes" id="quotes"><a href="#">Quotes</a></li>
   </ul>
 
   <!-- Content -->
@@ -59,7 +59,7 @@
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="resultsbody">
 
             </tbody>
           </table>
@@ -88,6 +88,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./js/author.js"></script>
   <script src="./js/index.js"></script>
+  <script src="./js/blog.js"></script>
 
 </body>
 
