--- a/public/cms.html
+++ b/public/cms.html
@@ -3,45 +3,65 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>CMS - Express</title>
-
-	<!--Materilize  -->
+	<link rel="shortcut icon" href="./images/favicon.ico">
+	<title>Casper</title>
+	<!--Import Google Icon Font-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+	<!-- Compiled and minified CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-
-	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-</head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+	<link rel="stylesheet" href="./css/styles.css">
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
 <body>
 	<div class="container hidden">
-		<div class="row top-30">
-			<div class="col-md-2 col-sm-2">
-				<a class="btn btn-light" href="/blog">Go to Blog</a>
+
+		  <!-- Nav Bar -->
+		  <nav>
+			<div class="nav-wrapper z-depth-0">
+			  <a class="brand-logo color">Casper</a>
+			  <ul class="right hide-on-med-and-down">
+				<li><a href="/blog.html">Home</a></li>
+				<li><a href="./cms.html">New Post</a></li>
+				<!-- Dropdown Trigger -->
+				<li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
+					  class="material-icons right">arrow_drop_down</i></a></li>
+			  </ul>
 			</div>
-			<div class="col-md-2 col-sm-2">
-				<a class="btn btn-light" href="/authors">Manage Authors</a>
-			</div>
-		</div>
-		<div class="row">
+		  </nav>
+		
+		
+		  <!-- Dropdown Structure -->
+		
+		  <ul id="dropdown1" class="dropdown-content">
+			<li class="category" data-name="DIY" id="diy"><a href="#">DIY</a></li>
+			<li class="category" data-name="cooking" id="cooking"><a href="#">Cooking</a></li>
+			<li class="category" data-name="travel" id="travel"><a href="#">Travel</a></li>
+			<li class="category" data-name="music" id="music"><a href="#">Music</a></li>
+			<li class="category" data-name="quotes" id="quotes"><a href="#">Quotes</a></li>
+		
+		  </ul>
+		
+		<div class="row white-text">
 			<div class="col-md-6 offset-md-3">
 				<form id="cms">
 					<div class="form-group">
 						<label for="title">Title:</label>
 						<input placeholder="Post Title" type="text" class="form-control" id="title">
 						<br />
-						<label for="body">Body:</label>
-						<textarea placeholder="Post Body" class="form-control" rows="10" id="body"></textarea>
+						<label for="body">Text:</label>
+						<textarea placeholder="Text" class="form-control" rows="10" id="text"></textarea>
 						<div class="form-group">
-							<label for="author">Select Author:</label>
+							<label for="author">Author:</label>
 							<select class="custom-select" id="author">
 								<option value="" disabled selected>Choose author option</option>
 							</select>
 						</div>
 						<!-- Added category field -->
 						<div class="form-group">
-							<label for="category">Select Category:</label>
+							<label for="category">Category:</label>
 							<select class="custom-select" id="category">
 								<option value="" disabled selected>Choose categorie option</option>
 								<option value="cooking">Cooking</option>
@@ -65,7 +85,13 @@
 
 
 
-	<script src="js/cms.js" type="text/javascript"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="./js/api.js"></script> 
+  <script src="./js/author.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="./js/blog.js"></script>
 	<script>
 		$(document).ready(function () {
 			$('select').formSelect();
