replaces missing link

--- a/public/cms.html
+++ b/public/cms.html
@@ -92,6 +92,7 @@
   <script src="./js/author.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/blog.js"></script>
+  <script src="./js/cms.js"></script>
 	<script>
 		$(document).ready(function () {
 			$('select').formSelect();
