--- a/public/cms.html
+++ b/public/cms.html
@@ -52,7 +52,7 @@
 						<input placeholder="Post Title" type="text" class="form-control" id="title">
 						<br />
 						<label for="body">Text:</label>
-						<textarea placeholder="Text" class="form-control" rows="10" id="text"></textarea>
+						<textarea placeholder="Text" class="form-control" rows="10" id="body"></textarea>
 						<div class="form-group">
 							<label for="author">Author:</label>
 							<select class="custom-select" id="author">
