added sign up button

--- a/public/blog.html
+++ b/public/blog.html
@@ -24,6 +24,7 @@
       <a class="brand-logo color">Casper</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/blog.html">Home</a></li>
+        <li><a href="/author-manager.html">Sign Up</a></li>
         <li><a href="./cms.html">New Post</a></li>
         <!-- Dropdown Trigger -->
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
