adds remove class for table

--- a/public/blog.html
+++ b/public/blog.html
@@ -50,8 +50,8 @@
     <div class="container center-align">
       <div class="row">
         <div class="col s12">
-          <table>
-            <thead class="hide">
+          <table class="hide" id="show">
+            <thead >
               <tr>
                 <th>Name</th>
                 <th>Title</th>
