--- a/public/cms.html
+++ b/public/cms.html
@@ -23,7 +23,7 @@
 			<div class="nav-wrapper z-depth-0">
 			  <a class="brand-logo color">Casper</a>
 			  <ul class="right hide-on-med-and-down">
-				<li><a href="/blog.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 				<li><a href="./cms.html">New Post</a></li>
 				<!-- Dropdown Trigger -->
 				<li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
