--- a/public/cms.html
+++ b/public/cms.html
@@ -55,9 +55,9 @@
 						<textarea placeholder="Text" class="form-control" rows="10" id="body"></textarea>
 						<div class="form-group">
 							<label for="author">Author:</label>
-							<select class="custom-select" id="author">
-								<option value="" disabled selected>Choose author option</option>
-							</select>
+							<p class="custom-select" id="author">
+								
+							</p>
 						</div>
 						<!-- Added category field -->
 						<div class="form-group">
