--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <div class="nav-wrapper z-depth-0">
       <a class="brand-logo color">Casper</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="/blog">Home</a></li>
+        <li><a href="/index">Home</a></li>
         <li><a href="/signup">Sign Up</a></li>
         <li><a href="./cms">New Post</a></li>
         <!-- Dropdown Trigger -->
@@ -95,7 +95,11 @@
   <script src="./js/api.js"></script> 
   <script src="./js/author.js"></script>
   <script src="./js/index.js"></script>
-  <script src="./js/blog.js"></script>
+  <script>
+  $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+  </script>
 
 </body>
 
