--- a/public/login.html
+++ b/public/login.html
@@ -39,6 +39,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
+  <script>
+    $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+  </script>
 
 </body>
 
