--- a/public/members.html
+++ b/public/members.html
@@ -29,6 +29,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
+  <script>
+    $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+  </script>
 
 </body>
 
