--- a/public/signup.html
+++ b/public/signup.html
@@ -47,6 +47,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
+  <script>
+  $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+  </script>
 
 </body>
 
