fixed some broken routes

--- a/public/cms.html
+++ b/public/cms.html
@@ -23,8 +23,8 @@
 			<div class="nav-wrapper z-depth-0">
 			  <a class="brand-logo color">Casper</a>
 			  <ul class="right hide-on-med-and-down">
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="./cms.html">New Post</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/cms">New Post</a></li>
 				<!-- Dropdown Trigger -->
 				<li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
 					  class="material-icons right">arrow_drop_down</i></a></li>
