--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       <a class="brand-logo color">Casper</a>
       <ul class="right hide-on-med-and-down">
 
-        <li><a href="/index">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/signup">Sign Up</a></li>
-        <li><a href="./cms">New Post</a></li>
+        <li><a href="/cms">New Post</a></li>
 
         <!-- Dropdown Trigger -->
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
