--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <nav>
     <div class="nav-wrapper z-depth-0">
       <a class="brand-logo color">Casper</a>
-      <ul class="right hide-on-med-and-down">
+      <ul class="right">
 
         <li><a href="/">Home</a></li>
         <li><a href="/signup">Sign Up</a></li>
