posts now display on main page

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,6 @@
           <table class="hide" id="show">
 
             <thead>
-
               <tr>
                 <th>Name</th>
                 <th>Title</th>
@@ -94,7 +93,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="./js/api.js"></script> 
+  <!-- <script src="./js/api.js"></script> --> 
   <script src="./js/author.js"></script>
   <script src="./js/index.js"></script>
 
