fixed dropdown so it opens when clicked

--- a/public/cms.html
+++ b/public/cms.html
@@ -81,19 +81,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- Custom Script -->
-		<!-- Compiled and minified JavaScript -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<script src="./js/api.js"></script>
-		<script src="./js/author.js"></script>
-		<script src="./js/index.js"></script>
-		<script src="./js/cms.js"></script>
-		<script>
-			$(document).ready(function () {
-				$('select').formSelect();
-			});
-		</script>
 	</body>
 </main>
 <footer class="page-footer transparent center-align">
@@ -105,6 +92,19 @@
 			</div>
 		</div>
 	</div>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="./js/api.js"></script> 
+  <script src="./js/author.js"></script>
+  <script src="./js/index.js"></script>
+
+  <script type="text/javascript">
+  $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+  </script>
+
 </footer>
 
 
