--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-</head>
 
 <body>
 
@@ -27,6 +26,10 @@
         <li><a href="/">Home</a></li>
         <li><a href="/signup">Sign Up</a></li>
         <li><a href="/cms">New Post</a></li>
+        <li><a class="navbar-brand" href="/logout">
+          Logout
+        </a></li>
+
 
         <!-- Dropdown Trigger -->
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Categories<i
