fixed bug with quote author

--- a/public/cms.html
+++ b/public/cms.html
@@ -55,7 +55,7 @@
 							<textarea placeholder="Text" class="form-control" rows="10" id="body"></textarea>
 							<div class="form-group">
 								<label for="author">Author:</label>
-								<p class="custom-select" id="author">
+								<p class="custom-select" id="username">
 
 								</p>
 							</div>
