adds missing cmsjs  link

--- a/public/cms.html
+++ b/public/cms.html
@@ -98,6 +98,7 @@
   <script src="./js/api.js"></script> 
   <script src="./js/author.js"></script>
   <script src="./js/index.js"></script>
+  <script src="./js/cms.js"></script>
 
   <script type="text/javascript">
   $(document).ready(function(){
