styled sign up and login

--- a/public/signup.html
+++ b/public/signup.html
@@ -46,7 +46,7 @@
           <button type="submit" class="btn btn-default sign-up-btn">Sign Up</button>
         </form>
         <br />
-        <p class="white-text" >Or log in <a class="colorful-link" href="/login">here</a></p>
+        <p class="colorful-link" >Or log in <a class="here-color" href="/login">here</a></p>
       </div>
     </div>
   </div>
