add random lorem picsum image to posts

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="./images/favicon.ico">
-  <title>Casper</title>
+  <title>Michelangelo's List</title>
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- Compiled and minified CSS -->
@@ -20,7 +20,7 @@
   <!-- Nav Bar -->
   <nav>
     <div class="nav-wrapper z-depth-0">
-      <a class="brand-logo color">Casper</a>
+      <a class="brand-logo color">Michelangelo's List</a>
       <ul class="right">
 
         <li><a href="/">Home</a></li>
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="row">
         <div>
-          <h5 class="white-text">Casper and Company</h5>
+          <h5 class="white-text">Team Michelangelo</h5>
           <p>Practicing social distancing since © 2020 </p>
         </div>
       </div>
